@@ -1,266 +1,273 @@
-    package com.example.bilabonnement.Controller;
-    import com.example.bilabonnement.Model.Car;
-    import com.example.bilabonnement.Model.Customer;
-    import com.example.bilabonnement.Model.Location;
-    import com.example.bilabonnement.Model.RentalAgreement;
-    import com.example.bilabonnement.Service.CarService;
-    import com.example.bilabonnement.Service.CustomerService;
-    import com.example.bilabonnement.Service.LocationService;
-    import com.example.bilabonnement.Service.RentalAgreementService;
-    import org.springframework.beans.factory.annotation.Autowired;
-    import org.springframework.stereotype.Controller;
-    import org.springframework.ui.Model;
-    import org.springframework.web.bind.annotation.*;
-    import org.springframework.web.servlet.mvc.support.RedirectAttributes;
+package com.example.bilabonnement.Controller;
 
-    import java.util.Collections;
-    import java.util.List;
-    import java.util.Map;
-    import java.util.stream.Collectors;
+import com.example.bilabonnement.Model.Car;
+import com.example.bilabonnement.Model.Customer;
+import com.example.bilabonnement.Model.Location;
+import com.example.bilabonnement.Model.RentalAgreement;
+import com.example.bilabonnement.Service.CarService;
+import com.example.bilabonnement.Service.CustomerService;
+import com.example.bilabonnement.Service.LocationService;
+import com.example.bilabonnement.Service.RentalAgreementService;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
-    @Controller
-    @RequestMapping("/dataRegistration")
-    public class RentalAgreementController {
+import java.time.LocalDate;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
-        @Autowired
-        private RentalAgreementService rentalAgreementService;
+@Controller
+@RequestMapping("/dataRegistration")
+public class RentalAgreementController {
 
-        @Autowired
-        private CarService carService;
+    @Autowired
+    private RentalAgreementService rentalAgreementService;
 
-        @Autowired
-        private CustomerService customerService;
+    @Autowired
+    private CarService carService;
 
-        @Autowired
-        private LocationService locationService;
+    @Autowired
+    private CustomerService customerService;
 
-        // OVERVIEW
-        // OVERVIEW
-        @GetMapping("/rental-agreements")
-        public String showOverview(Model model) {
-            try { // <-- Start af try blok
-                List<RentalAgreement> agreements = rentalAgreementService.findAll();
-                List<Car> allCars = carService.findAllCars();
-                List<Customer> allCustomers = customerService.findAllCustomers();
+    @Autowired
+    private LocationService locationService;
 
-                // Første definition af Maps - Jeg antager, du kun ønsker én version.
-                // Jeg beholder denne version, da den ser mest detaljeret ud.
-                Map <Integer, String>  carNamesById = allCars.stream()
-                        .collect(Collectors.toMap(
-                                Car::getCarId,
-                                car -> (car.getBrandName() != null ? car.getBrandName() : "") + " " + (car.getModelName() != null ? car.getModelName() : "")
-                        ));
+    // OVERVIEW
+    @GetMapping("/rental-agreements")
+    public String showOverview(@RequestParam(value = "searchRentalAgreementId", required = false) Integer searchId,
+                               @RequestParam(value = "statusFilter", required = false) String statusFilter,
+                               Model model) {
 
-                Map<Integer, String> customerNamesById = allCustomers.stream()
-                        .collect(Collectors.toMap(
-                                Customer::getCustomerId,
-                                Customer::getDisplayName // Antager getDisplayName er en metode i Customer
-                        ));
+        LocalDate today = LocalDate.now();
 
-                model.addAttribute("agreements", agreements);
-                model.addAttribute("carNames", carNamesById);
-                model.addAttribute("customerNames", customerNamesById);
-                model.addAttribute("searchRentalAgreementId", ""); // Beholder denne
+        List<RentalAgreement> agreements = rentalAgreementService.findAll();
+        List<Car> allCars = carService.findAllCars();
+        List<Customer> allCustomers = customerService.findAllCustomers();
 
-                // Jeg fjerner den dobbelte definition af Maps og addAttribute kald herfra
 
-            } catch (Exception e) { // <-- Slut på try blok, start på catch blok
-                e.printStackTrace();
-                model.addAttribute("agreements", Collections.emptyList());
-                model.addAttribute("errorMessage", "Kunne ikke indlæse lejeaftaler.");
+        //search filter
+        if (searchId != null)
+        {
+            RentalAgreement agreement = rentalAgreementService.findById(searchId);
+            if (agreement != null)
+            {
+                agreements = List.of(agreement);
+            } else
+            {
+                agreements = List.of();
             }
-            return "dataRegistration/rental/rental-agreements-overview";
+            model.addAttribute("errorMessage", "Lejeaftale med ID " + searchId + " blev ikke fundet.");
+        } else
+        {
+            agreements = rentalAgreementService.findAll();
         }
 
+        //status filter
+        if (statusFilter != null && !statusFilter.isEmpty())
+        {
+            agreements = agreements.stream()
+                    .filter(agreement -> {
+                        LocalDate start = agreement.getStartDate();
+                        LocalDate end = agreement.getEndDate();
+                        return switch (statusFilter)
+                        {
+                            case "upcoming" -> start != null && start.isAfter(today);
+                            case "active" ->
+                                    start != null && !start.isAfter(today) && (end == null || end.isAfter(today));
+                            case "completed" -> end != null && end.isBefore(today);
+                            default -> true;
+                        };
+                    })
+                    .toList();
+        }
 
-        //SHOW CREATE FORM
+        Map<Integer, String> carNamesById = allCars.stream()
+                .collect(Collectors.toMap(
+                        Car::getCarId,
+                        car -> car.getBrandName() + " " + car.getModelName()
+                ));
+
+        Map<Integer, String> customerNamesById = allCustomers.stream()
+                .collect(Collectors.toMap(
+                        Customer::getCustomerId,
+                        c -> c.getFname() + " " + c.getLname()
+                ));
+
+
+
+        model.addAttribute("agreements", agreements);
+        model.addAttribute("carNames", carNamesById);
+
+        model.addAttribute("customerNames", customerNamesById);
+        model.addAttribute("searchRentalAgreementId", "");
+        model.addAttribute("searchRentalAgreementId", searchId != null ? searchId : "");
+
+        return "dataRegistration/rental/rental-agreements-overview";
+    }
+
+
+
+    //SHOW CREATE FORM
     @GetMapping("/rental-agreements/create")
     public String showCreateForm(Model model) {
-        try {
-            List<Car> allCars = carService.findAllCars(); // Eller findAll()
-            List<Car> availableCars = allCars.stream()
-                    .filter(car -> car.getCarStatusId() != null && car.getCarStatusId() == 1)
-                    .collect(Collectors.toList());
+        List<Car> allCars = carService.findAllCars();
+        List<Location> allLocations = locationService.findAllLocations();
+        List<Customer> allCustomers = customerService.findAllCustomers();
 
-            List<Customer> allCustomers = customerService.findAllCustomers();
-            List<Location> allLocations = locationService.findAllLocations(); // Tilføjet for create form
-
-            RentalAgreement rentalAgreement = new RentalAgreement();
+        // Filter cars with car_status_id == 1 (Tilgængelig)
+        List<Car> availableCars = allCars.stream()
+                .filter(car -> car.getCarStatusId() == 1)
+                .toList();
 
 
-            model.addAttribute("rentalAgreement", new RentalAgreement());
-            model.addAttribute("availableCars", availableCars); // Ændret fra "cars"
-            model.addAttribute("allCustomers", allCustomers);
-            model.addAttribute("allLocations", allLocations); // Tilføjet
-        } catch (Exception e) {
-            e.printStackTrace();
-            model.addAttribute("errorMessage", "Kunne ikke indlæse data til formularen.");
-            model.addAttribute("rentalAgreement", new RentalAgreement());
-            model.addAttribute("availableCars", Collections.emptyList());
-            model.addAttribute("allCustomers", Collections.emptyList());
-            model.addAttribute("allLocations", Collections.emptyList());
-        }
+
+        RentalAgreement rentalAgreement = new RentalAgreement();
+
+        // Generate a new leasing code (e.g., "LEASING-0010")
+        int nextId = rentalAgreementService.findNextId(); // You need to implement this
+        String generatedCode = "LEASING-" + String.format("%04d", nextId);
+        rentalAgreement.setLeasingCode(generatedCode);
+
+        model.addAttribute("rentalAgreement", new RentalAgreement());
+        model.addAttribute("cars", availableCars);
+        model.addAttribute("customers", allCustomers);
+        model.addAttribute("locations", allLocations);
         return "dataRegistration/rental/create-agreement";
     }
 
-        // CREATE RENTAL AGREEMENT
-        @PostMapping("/rental-agreements/create")
-        public String createRentalAgreement(@ModelAttribute RentalAgreement rentalAgreement,
-                                            Model model,
-                                            RedirectAttributes redirectAttributes) {
 
-            if (!rentalAgreement.isEndDateValid()) {
-                List<Car> allCars = carService.findAllCars().stream()
-                        .filter(car -> car.getCarStatusId() == 1 )
-                        .toList();
+    // CREATE RENTAL AGREEMENT
+    @PostMapping("/rental-agreements/create")
+    public String createRentalAgreement(@ModelAttribute RentalAgreement rentalAgreement,
+                                        Model model,
+                                        RedirectAttributes redirectAttributes) {
 
-                List<Customer> allCustomers = customerService.findAllCustomers();
+        if (!rentalAgreement.isEndDateValid())
+        {
+            List<Car> allCars = carService.findAllCars().stream()
+                    .filter(car -> car.getCarStatusId() == 1)
+                    .toList();
 
-                model.addAttribute("rentalAgreement", rentalAgreement);
-                model.addAttribute("cars", allCars);
-                model.addAttribute("customers", allCustomers);
-                model.addAttribute("errorMessage", "Slutdato skal være mindst 3 måneder efter startdato.");
-                return "dataRegistration/rental/create-agreement";
-            }
+            List<Customer> allCustomers = customerService.findAllCustomers();
 
-            Car selectedCar = carService.findById(rentalAgreement.getCarId());
-            if (selectedCar != null) {
-                rentalAgreement.setStartOdometer(selectedCar.getCurrentOdometer());
-
-                selectedCar.setCarStatusId(2);
-                carService.update(selectedCar);
-            }
-
-            try {
-                rentalAgreementService.create(rentalAgreement);
-                redirectAttributes.addFlashAttribute("successMessage", "Lejeaftale oprettet!");
-            } catch (Exception e) {
-                e.printStackTrace(); // Print error to console
-                redirectAttributes.addFlashAttribute("errorMessage", "Fejl ved oprettelse!");
+            model.addAttribute("rentalAgreement", rentalAgreement);
+            model.addAttribute("cars", allCars);
+            model.addAttribute("customers", allCustomers);
+            model.addAttribute("errorMessage", "Slutdato skal være mindst 3 måneder efter startdato.");
+            return "dataRegistration/rental/create-agreement";
         }
-        return "redirect:/dataRegistration/rental-agreements"; // Redirect til oversigt
+
+        Car selectedCar = carService.findById(rentalAgreement.getCarId());
+        if (selectedCar != null)
+        {
+            rentalAgreement.setStartOdometer(selectedCar.getCurrentOdometer());
+
+            selectedCar.setCarStatusId(2);
+            carService.update(selectedCar);
+        }
+
+        try
+        {
+            rentalAgreementService.create(rentalAgreement);
+            redirectAttributes.addFlashAttribute("successMessage", "Lejeaftale oprettet!");
+        } catch (Exception e)
+        {
+            e.printStackTrace(); // Print error to console
+            redirectAttributes.addFlashAttribute("errorMessage", "Fejl ved oprettelse!");
+        }
+        return "redirect:/dataRegistration/rental-agreements";
+
     }
 
-    //SHOW EDIT FORM
 
+    //SHOW EDIT FORM
     @GetMapping("/rental-agreements/edit/{id}")
     public String showEditForm(@PathVariable int id, Model model, RedirectAttributes redirectAttributes) {
         RentalAgreement agreement = rentalAgreementService.findById(id);
-        if (agreement == null) {
-            redirectAttributes.addFlashAttribute("errorMessage", "Lejeaftale med ID " + id + " blev ikke fundet.");
+        if (agreement == null)
+        {
+            redirectAttributes.addFlashAttribute("errorMessage", "Lejeaftale ikke fundet.");
             return "redirect:/dataRegistration/rental-agreements";
         }
-
-        try {
-            List<Car> allCars = carService.findAllCars();
-
-            Car initialCurrentCarOnAgreement = null; // Midlertidig variabel
-            if (agreement.getCarId() != null && agreement.getCarId() > 0) {
-                initialCurrentCarOnAgreement = carService.findById(agreement.getCarId());
-            }
-
-            // Denne variabel er nu effektivt final for lambdaet nedenfor
-            final Car currentCarForFilter = initialCurrentCarOnAgreement;
-
-            List<Car> availableCarsForEdit = allCars.stream()
-                    .filter(carInLoop -> {
-                        boolean isGenerallyAvailable = (carInLoop.getCarStatusId() != null && carInLoop.getCarStatusId() == 1);
-                        boolean isTheCurrentCar = false;
-                        if (currentCarForFilter != null) { // Brug den effektivt finale variabel
-                            // Antager carInLoop.getCarId() og currentCarForFilter.getCarId() returnerer int
-                            isTheCurrentCar = (carInLoop.getCarId() == currentCarForFilter.getCarId());
-                        }
-                        return isGenerallyAvailable || isTheCurrentCar;
-                    })
-                    .distinct()
-                    .collect(Collectors.toList());
-            model.addAttribute("availableCars", availableCarsForEdit);
-
-            List<Customer> allCustomers = customerService.findAllCustomers();
-            model.addAttribute("allCustomers", allCustomers);
-
-            List<Location> allLocations = locationService.findAllLocations();
-            model.addAttribute("allLocations", allLocations);
-
-        } catch (Exception e) {
-            e.printStackTrace();
-            redirectAttributes.addFlashAttribute("errorMessage", "Fejl ved indlæsning af data til redigeringsformularen: " + e.getMessage());
-            model.addAttribute("rentalAgreement", agreement);
-            model.addAttribute("availableCars", Collections.emptyList());
-            model.addAttribute("allCustomers", Collections.emptyList());
-            model.addAttribute("allLocations", Collections.emptyList());
-            return "dataRegistration/rental/editRentalAgreement";
-        }
-
         model.addAttribute("rentalAgreement", agreement);
         return "dataRegistration/rental/editRentalAgreement";
     }
 
-
-
     // HANDLE EDIT SUBMISSION
     @PostMapping("/rental-agreements/update")
-    public String updateRentalAgreement(@ModelAttribute("rentalAgreement") RentalAgreement rentalAgreement,
+    public String updateRentalAgreement(@ModelAttribute RentalAgreement rentalAgreement,
                                         RedirectAttributes redirectAttributes) {
-        try {
-            rentalAgreementService.update(rentalAgreement);
-            redirectAttributes.addFlashAttribute("successMessage", "Lejeaftale med ID " + rentalAgreement.getRentalAgreementId() + " opdateret succesfuldt!");
-        } catch (IllegalArgumentException e) {
-            redirectAttributes.addFlashAttribute("errorMessage", e.getMessage());
-            return "redirect:/dataRegistration/rental-agreements/edit/" + rentalAgreement.getRentalAgreementId();
-        } catch (Exception e) {
-            e.printStackTrace();
-            redirectAttributes.addFlashAttribute("errorMessage", "En uventet fejl opstod under opdatering.");
-        }
+        rentalAgreementService.update(rentalAgreement);
+        redirectAttributes.addFlashAttribute("successMessage", "Lejeaftale opdateret!");
         return "redirect:/dataRegistration/rental-agreements";
     }
 
     // VIEW SINGLE AGREEMENT
-    @GetMapping("/rental-agreements/{id}") // Fuld sti: /dataRegistration/rental-agreements/{id}
+    @GetMapping("/rental-agreements/{id}")
     public String viewRentalAgreementDetails(@PathVariable("id") int rentalAgreementId,
                                              Model model,
                                              RedirectAttributes redirectAttributes) {
-        // logger.info("Viser detaljer for lejeaftale ID: {}", rentalAgreementId);
         RentalAgreement agreement = rentalAgreementService.findById(rentalAgreementId);
 
-        if (agreement == null) {
-            redirectAttributes.addFlashAttribute("errorMessage", "Lejeaftale med ID " + rentalAgreementId + " blev ikke fundet.");
+        if (agreement == null)
+        {
+            redirectAttributes.addFlashAttribute("errorMessage",
+                    "Lejeaftale med ID " + rentalAgreementId + " blev ikke fundet.");
             return "redirect:/dataRegistration/rental-agreements";
         }
+
         model.addAttribute("rentalAgreement", agreement);
 
-        try {
-            if (agreement.getCarId() != null && agreement.getCarId() > 0) {
-                model.addAttribute("carDetails", carService.findById(agreement.getCarId()));
-            }
-            if (agreement.getCustomerId() != null && agreement.getCustomerId() > 0) {
-                model.addAttribute("customerDetails", customerService.findById(agreement.getCustomerId()));
-            }
-            if (agreement.getPickupLocationId() != null && agreement.getPickupLocationId() > 0) {
-                model.addAttribute("pickupLocationDetails", locationService.findLocationById(agreement.getPickupLocationId()));
-            }
-            if (agreement.getReturnLocationId() != null && agreement.getReturnLocationId() > 0) {
-                model.addAttribute("returnLocationDetails", locationService.findLocationById(agreement.getReturnLocationId()));
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
-            model.addAttribute("errorMessage", "Kunne ikke indlæse alle detaljer for lejeaftalen.");
+        if (agreement.getCarId() > 0)
+        {
+            Car car = carService.findById(agreement.getCarId());
+            model.addAttribute("carDetails", car);
+        } else
+        {
+            model.addAttribute("carDetails", null);
+        }
+
+        if (agreement.getCustomerId() > 0)
+        {
+            Customer customer = customerService.findById(agreement.getCustomerId());
+            model.addAttribute("customerDetails", customer);
+        } else
+        {
+            model.addAttribute("customerDetails", null);
+        }
+
+        if (agreement.getPickupLocationId() > 0)
+        {
+            System.out.println("Pickup Location ID: " + agreement.getPickupLocationId()); // Se hvad ID'et faktisk er
+            Location pickupLoc = locationService.findLocationById(agreement.getPickupLocationId());
+            System.out.println("Pickup Location object: " + (pickupLoc != null ? "Found" : "Not found")); // Se om objektet findes
+            model.addAttribute("pickupLocationDetails", pickupLoc);
+        } else
+        {
+            System.out.println("Pickup Location ID er 0 eller mindre"); // Bekræft at dette er tilfældet
+            model.addAttribute("pickupLocationDetails", null);
+        }
+
+        if (agreement.getReturnLocationId() != null && agreement.getReturnLocationId() > 0)
+        {
+            Location returnLoc = locationService.findLocationById(agreement.getReturnLocationId());
+            model.addAttribute("returnLocationDetails", returnLoc);
+        } else
+        {
+            model.addAttribute("returnLocationDetails", null);
         }
         return "dataRegistration/rental/view-rental-details";
     }
 
     // DELETE AGREEMENT
-   /* @PostMapping("/rental-agreements/delete/{id}") // Fuld sti: /dataRegistration/rental-agreements/delete/{id}
+    @PostMapping("/rental-agreements/delete/{id}")
     public String deleteRentalAgreement(@PathVariable int id,
                                         RedirectAttributes redirectAttributes) {
-        // logger.info("Forsøger at slette lejeaftale ID: {}", id);
-        try {
-            rentalAgreementService.deleteById(id);
-            redirectAttributes.addFlashAttribute("successMessage", "Lejeaftale slettet succesfuldt.");
-        } catch (Exception e) {
-            e.printStackTrace();
-            redirectAttributes.addFlashAttribute("errorMessage", "Fejl ved sletning: " + e.getMessage());
-        }
+        rentalAgreementService.delete(id);
+        redirectAttributes.addFlashAttribute("successMessage", "Lejeaftale slettet.");
         return "redirect:/dataRegistration/rental-agreements";
-    }*/
+    }
 }
